@@ -28,6 +28,7 @@ lib boost_wave
       <include>$(BOOST_ROOT) 
       <sysinclude>$(BOOST_ROOT)
       <vc-7_1><*><rtti>off     # workaround for compiler bug
+      <vc-7_1-stlport><*><rtti>off
       <no-warn>cpp_re.cpp
     : debug release           # build variants
     ;
